feat: add google maps api key and update dotenv path
This commit introduces the `GOOGLE_MAPS_API_KEY` to the build script.
It also updates the `pubspec.yaml` to include `assets/.env` and comments out the root `.env` file.
The `main.dart` file has been modified to load the environment variables from `assets/.env` instead of the root `.env` file.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -105,8 +105,8 @@ flutter:
   assets:
     - assets/images/
     - assets/svgs/
-#    - assets/.env
-    - .env
+    - assets/.env
+#    - .env
   fonts:
     - family: Montserrat
       fonts:
