feat: Enhance address fetching with establishment detection
This commit introduces a new feature to improve address fetching by incorporating establishment (Point of Interest - POI) detection.

Key changes:
- Added `fetchAddressFromLatLngWithEstablishments` in `TripsProvider` to prioritize finding nearby establishments before falling back to regular geocoding.
- Implemented platform-specific establishment detection:
    - For web, it uses the Google Maps Places API (Autocomplete and Place Details) to search for various establishment types near the given coordinates. It iterates through common search terms (restaurant, store, etc.) and picks the closest valid establishment within a 200m radius.
    - For mobile, it continues to use the HTTP Nearby Search API.
- Introduced `WebGeocodingService` for web-specific Google Maps JavaScript API interactions, including initializing a hidden map, syncing its position with the Flutter map, and simulating clicks to detect POIs.
- Updated `AddTripPage`:
    - The map tap/camera idle logic now uses the new `fetchAddressFromLatLngWithEstablishments` method.
    - Added experimental code for initializing and interacting with `WebGeocodingService` (commented out for now).
- Added `geocoding` and `webview_flutter` dependencies to `pubspec.yaml`.
- Initialized Google Maps Services with an API key in `AppDelegate.swift` for iOS.
- Changed the default radius for fetching nearby drivers from 10km to 3km in `TripsProvider`.
- Modified `main.dart` to load `.env` from the root directory instead of `assets/.env`.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,9 @@ dependencies:
   image: ^4.5.4
   shimmer: ^2.0.0
   firebase_storage: ^12.4.7
-  google_maps_flutter: ^2.12.3
+  google_maps_flutter: ^2.10.0
+  geocoding: ^4.0.0
+  webview_flutter: ^4.4.2
   geolocator: ^14.0.1
   flutter_geofire: ^2.0.6
   flutter_polyline_points: ^2.1.0
